Make the app an installable PWA with update notification

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,5 +32,9 @@
   },
   "thumbnail": {
     "alt": "Thumbnail {index}"
+  },
+  "pwa": {
+    "updateComplete": "App updated successfully!",
+    "close": "Close notification"
   }
 }
