--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -32,5 +32,9 @@
   },
   "thumbnail": {
     "alt": "Miniatuur {index}"
+  },
+  "pwa": {
+    "updateComplete": "App succesvol bijgewerkt!",
+    "close": "Sluiten melding"
   }
 }
